# rle-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  publish.yml
docs/: api.md  assessment.md  cli-and-backends.md  concepts.md  contributing.md  ecosystem-codes.md  ecosystems.md  index.md  installation.md  myst.yml  quickstart.md  styles.css
scripts/: assign_ecosystem_codes.py
src/rle/core/: __init__.py  _entrypoints.py  aoo.py  aoo_grid.py  cli.py  ecosystem_codes.py  ecosystems.py  eoo.py  registry.py  rle.py  viz.py
tests/: test_aoo.py  test_ecosystems.py  test_eoo.py  test_main.py  test_rle_criteria.py  test_viz.py
tests/test_data/: aoo_grid_null_island_golden.parquet  null_island.geojson
