[project]
name = "rle-python"
version = "0.2.0"
description = "Core tools for IUCN Red List of Ecosystems analysis with local and cloud data access"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Tyler Erickson", email = "tyler@vorgeo.com" },
]
keywords = [
    "IUCN",
    "Red List of Ecosystems",
    "RLE",
    "AOO",
    "EOO",
    "ecology",
    "biodiversity",
    "geospatial",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Operating System :: OS Independent",
]
dependencies = [
    "fsspec",
    "geopandas>=1.1.3",
    "numpy>=1.24.0",
    "pandas",
    "pyarrow",
    "pyproj",
    "pyyaml>=6.0.3",
    "rasterio>=1.3.0",
    "rasterstats",
    "rioxarray",
    "shapely>=2",
    "typer>=0.20.0",
]

[project.optional-dependencies]
viz = ["lonboard", "matplotlib>=3.9.0"]
gcs = ["gcsfs"]
aws = ["s3fs"]

[project.urls]
Homepage = "https://rle-assessment.github.io/rle-python/"
Documentation = "https://rle-assessment.github.io/rle-python/"
Repository = "https://github.com/RLE-Assessment/rle-python"
Issues = "https://github.com/RLE-Assessment/rle-python/issues"

[project.scripts]
rle = "rle.core.cli:app"

[project.entry-points."rle.backends"]
core = "rle.core._entrypoints:register"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/rle/core"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "pyproject.toml"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests (mocked, fast, no Earth Engine authentication required)",
    "integration: Integration tests (requires Earth Engine authentication, slower)",
]
