[project]
name = "rle-python"
version = "0.2.2"
description = "Core tools for IUCN Red List of Ecosystems analysis with local and cloud data access"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Tyler Erickson", email = "tyler@vorgeo.com" },
]
keywords = [
    "IUCN",
    "Red List of Ecosystems",
    "RLE",
    "AOO",
    "EOO",
    "ecology",
    "biodiversity",
    "geospatial",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Operating System :: OS Independent",
]
dependencies = [
    "fsspec",
    "geopandas>=1.1.3",
    "numpy>=1.24.0",
    "pandas",
    "pyarrow",
    "pyproj",
    "pyyaml>=6.0.3",
    "rasterio>=1.3.0",
    "rasterstats",
    "rioxarray",
    "shapely>=2",
    "typer>=0.20.0",
]

[project.optional-dependencies]
viz = ["lonboard", "matplotlib>=3.9.0"]
gcs = ["gcsfs"]
aws = ["s3fs"]

[project.urls]
Homepage = "https://rle-assessment.github.io/rle-python/"
Documentation = "https://rle-assessment.github.io/rle-python/"
Repository = "https://github.com/RLE-Assessment/rle-python"
Issues = "https://github.com/RLE-Assessment/rle-python/issues"

[project.scripts]
rle = "rle.core.cli:app"

[project.entry-points."rle.backends"]
core = "rle.core._entrypoints:register"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/rle/core"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "pyproject.toml"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests (mocked, fast, no Earth Engine authentication required)",
    "integration: Integration tests (requires Earth Engine authentication, slower)",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

# Jupyter is what lets MyST execute the `{code-cell}` blocks in docs/.
# ipykernel provides the `python3` kernel referenced by the page frontmatter;
# jupyter-server is the server MyST connects to when run with `--execute`.
[tool.pixi.dependencies]
python = ">=3.11,<3.13"
jupyter_server = "*"
ipykernel = "*"
requests = ">=2.34.2,<3"
aiohttp = ">=3.14.1,<4"

# Install this package (and its runtime deps from [project]) editable into the
# pixi env so the docs kernel can `import rle`. The `viz` extra pulls in
# lonboard + matplotlib so docs cells can render maps and plots.
[tool.pixi.pypi-dependencies]
rle-python = { path = ".", editable = true, extras = ["viz"] }

[tool.pixi.tasks]
# The MyST config (myst.yml) lives in docs/, so run the tasks from there.
# Live preview with executed cells (http://localhost:3000 by default).
docs = { cmd = "myst start --execute", cwd = "docs" }
# One-shot build that executes cells; useful for CI and for verifying output.
docs-build = { cmd = "myst build --execute --html", cwd = "docs" }
